fixed wrong colors

--- a/wp-content/themes/wakeup/css/style.less
+++ b/wp-content/themes/wakeup/css/style.less
@@ -604,7 +604,7 @@ div.wpcf7-mail-sent-ok
 
 div.wpcf7-mail-sent-ok
 {
-	color: green;
+	color: @wum-pink;
 }
 
 div.wpcf7-validation-errors
@@ -614,7 +614,7 @@ div.wpcf7-validation-errors
 
 div.wpcf7-mail-sent-ng
 {
-	color: @wum-pink;
+	color: red;
 }
 	
 span.wpcf7-not-valid-tip 
